syntax = "proto3";

package twirp.example.greeter;
option go_package = "rpc/greeter;greeter";

service Greeter {
  rpc MakeGreeting(NameInput) returns (GreeterResponse);
}

message NameInput {
  string name = 1; // just enter your name here
}

message GreeterResponse {
  string text = 1;
}